feat: section resources

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Future Tech | Home</title>
   <link rel="stylesheet" href="./styles/main.css">
   <script src="./scripts/main.js" type="module" defer></script>
+  <link rel="stylesheet" href="styles/_globals.scss">
 </head>
 <body>
   <header class="header" data-js-header>
@@ -622,8 +623,7 @@
             tabindex="0"
             data-js-tabs-content
           >
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, facilis!
-          </div>
+            Quantum computing is a revolutionary technology that leverages the principles of quantum mechanics, such as superposition and entanglement, to perform complex calculations at unprecedented speeds. Unlike classical computers that use bits, quantum computers use qubits, which can exist in multiple states simultaneously. This enables them to solve problems in cryptography, optimization, and drug discovery that are currently intractable for traditional systems.          </div>
           <div 
             class="tabs__content" 
             id="tabpanel-3"
@@ -631,8 +631,7 @@
             tabindex="0"
             data-js-tabs-content
           >
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, facilis!
-          </div>
+            AI ethics focuses on the moral principles and guidelines governing the development and use of artificial intelligence. It addresses issues like bias, transparency, privacy, and accountability to ensure AI systems are fair, safe, and beneficial for society. Ethical AI aims to prevent harm, promote inclusivity, and align technology with human values, fostering trust and responsible innovation in an increasingly AI-driven world.          </div>
           <div 
             class="tabs__content" 
             id="tabpanel-4"
@@ -640,8 +639,7 @@
             tabindex="0"
             data-js-tabs-content
           >
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, facilis!
-          </div>
+            Space exploration is the ongoing discovery and study of celestial structures in outer space through advancing technology and astronomy. It has transformed our understanding of the universe, from the first moon landing to the exploration of Mars and beyond. Missions like the Hubble Space Telescope and the Voyager probes have revealed stunning insights into distant galaxies, exoplanets, and cosmic phenomena. Space exploration also drives innovation, inspiring advancements in science, engineering, and technology. Moreover, it raises profound questions about humanity's place in the universe and the potential for life beyond Earth. As we venture further, international collaboration and sustainable practices will be key to unlocking the mysteries of the cosmos.          </div>
           <div 
             class="tabs__content" 
             id="tabpanel-5"
@@ -649,8 +647,7 @@
             tabindex="0"
             data-js-tabs-content
           >
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, facilis!
-          </div>
+            Biotechnology is a cutting-edge field that harnesses biological systems, organisms, or derivatives to develop innovative products and technologies. It has revolutionized medicine through advancements like gene therapy, vaccines, and personalized medicine, offering solutions to previously incurable diseases. In agriculture, biotechnology enables the creation of genetically modified crops that are more resilient and nutritious, addressing global food security challenges. Additionally, it plays a crucial role in environmental sustainability, with applications in biofuel production and waste management. By merging biology with technology, this field holds immense potential to improve human health, enhance food production, and protect the planet, shaping a better future for all.          </div>
           <div 
             class="tabs__content" 
             id="tabpanel-6"
@@ -658,13 +655,213 @@
             tabindex="0"
             data-js-tabs-content
           >
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, facilis!
-          </div>
+            Renewable energy is derived from natural sources that are constantly replenished, such as sunlight, wind, water, and geothermal heat. Unlike fossil fuels, which are finite and contribute to climate change, renewable energy offers a sustainable and environmentally friendly alternative. Solar power harnesses energy from the sun through photovoltaic cells, while wind turbines convert wind into electricity. Hydropower utilizes flowing water, and geothermal energy taps into the Earth's internal heat. These sources reduce greenhouse gas emissions, decrease dependence on non-renewable resources, and promote energy independence. Governments and businesses worldwide are investing in renewable energy infrastructure to combat climate change and create a greener future. As technology advances, renewable energy becomes more efficient and accessible, paving the way for a cleaner, healthier planet for future generations.          </div>
         </div>
       </div>
     </section>
 
-    
+    <section class="section" aria-labelledby="resources-title">
+      <header class="section__header">
+        <div class="section__header-inner container">
+          <div class="section__header-info">
+            <p class="section__subtitle tag">Your Gateway to In-Depth Information</p>
+            <h2 class="section__title" id="resources-title">Unlock Valuable Knowledge with FutureTech's Resources</h2>
+          </div>
+          <a href="/" class="section__link button">
+            <span class="icon icon--yellow-arrow">View All Resources</span>
+          </a>
+        </div>
+      </header>
+      <div class="section__body">
+        <ul class="list">
+          <li class="list__item">
+            <div class="card container">
+              <div class="card__preview">
+                <div class="card__preview-main">
+                  <img
+                    class="card__preview-icon"
+                    src="./images/resources/icon-1.svg"
+                    alt=""
+                    width="80" height="80" loading="lazy"
+                  />
+                  <div class="card__preview-info">
+                    <h3 class="card__preview-title">Ebooks</h3>
+                    <div class="card__preview-description">
+                      <p>Explore our collection of ebooks covering a wide spectrum of future technology topics.</p>
+                    </div>
+                  </div>
+                  <a href="/" class="card__preview-link button button--dark-gray">
+                    <span class="icon icon--yellow-arrow">Download Ebooks Now</span>
+                  </a>
+                </div>
+                <div class="card__preview-extra">
+                  <div class="download-info tile">
+                    <div class="download-info__body">
+                      <p class="download-info__title">Downloaded By</p>
+                      <p class="download-info__subtitle h5">10k + Users</p>
+                    </div>
+                    <div class="download-info__team team">
+                      <img
+                        class="team__person"
+                        src="./images/team/1.png"
+                        alt=""
+                        width="50" height="50" loading="lazy"
+                      />
+                      <img
+                        class="team__person"
+                        src="./images/team/2.png"
+                        alt=""
+                        width="50" height="50" loading="lazy"
+                      />
+                      <img
+                        class="team__person"
+                        src="./images/team/3.png"
+                        alt=""
+                        width="50" height="50" loading="lazy"
+                      />
+                      <img
+                        class="team__person"
+                        src="./images/team/4.png"
+                        alt=""
+                        width="50" height="50" loading="lazy"
+                      />
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card__body">
+                <div class="card__grid card__grid--2-cols-alt">
+                  <div class="card__cell">
+                    <h3 class="card__cell-title h5">Variety of Topics</h3>
+                  </div>
+                  <div class="card__cell">
+                    <p class="card__cell-description">
+                      Topics include AI in education (25%), renewable energy (20%), healthcare (15%), space exploration (25%), and biotechnology (15%).
+                    </p>
+                  </div>
+                  <div class="card__cell card__cell--wide">
+                    <img
+                      class="card__cell-image"
+                      src="./images/resources/details-1.jpg"
+                      alt=""
+                      width="917" height="332" loading="lazy"
+                    />
+                  </div>
+                  <div class="card__cell tile">
+                    <h4 class="card__cell-subtitle">Total Ebooks</h4>
+                    <p class="card__cell-description h6">Over 100 ebooks</p>
+                  </div>
+                  <div class="card__cell tile">
+                    <h4 class="card__cell-subtitle">Download Formats</h4>
+                    <p class="card__cell-description h6">PDF format for access.</p>
+                    <a href="/" class="card__cell-link button">
+                      <span class="icon icon--yellow-eye">Preview</span>
+                    </a>
+                  </div>
+                  <div class="card__cell card__cell--wide tile ">
+                    <h4 class="card__cell-subtitle">Average Author Expertise</h4>
+                    <p class="card__cell-description h6">Ebooks are authored by renowned experts with an average of 15 years of experience</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="list__item">
+            <div class="card container">
+              <div class="card__preview">
+                <div class="card__preview-main">
+                  <img
+                    class="card__preview-icon"
+                    src="./images/resources/icon-2.svg"
+                    alt=""
+                    width="80" height="80" loading="lazy"
+                  />
+                  <div class="card__preview-info">
+                    <h3 class="card__preview-title">Whitepapers</h3>
+                    <div class="card__preview-description">
+                      <p>Dive into comprehensive reports and analyses with our collection of whitepapers. </p>
+                    </div>
+                  </div>
+                  <a href="/" class="card__preview-link button button--dark-gray">
+                    <span class="icon icon--yellow-arrow">Download Whitepapers Now</span>
+                  </a>
+                </div>
+                <div class="card__preview-extra">
+                  <div class="download-info tile">
+                    <div class="download-info__body">
+                      <p class="download-info__title">Downloaded By</p>
+                      <p class="download-info__subtitle h5">10k + Users</p>
+                    </div>
+                    <div class="download-info__team team">
+                      <img
+                        class="team__person"
+                        src="./images/team/1.png"
+                        alt=""
+                        width="50" height="50" loading="lazy"
+                      />
+                      <img
+                        class="team__person"
+                        src="./images/team/2.png"
+                        alt=""
+                        width="50" height="50" loading="lazy"
+                      />
+                      <img
+                        class="team__person"
+                        src="./images/team/3.png"
+                        alt=""
+                        width="50" height="50" loading="lazy"
+                      />
+                      <img
+                        class="team__person"
+                        src="./images/team/4.png"
+                        alt=""
+                        width="50" height="50" loading="lazy"
+                      />
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card__body">
+                <div class="card__grid card__grid--2-cols-alt">
+                  <div class="card__cell">
+                    <h3 class="card__cell-title h5">Topics Coverage</h3>
+                  </div>
+                  <div class="card__cell">
+                    <p class="card__cell-description">
+                      Whitepapers cover quantum computing (20%), AI ethics (15%), space mining prospects (20%), AI in healthcare (15%), and renewable energy strategies (30%).                    </p>
+                  </div>
+                  <div class="card__cell card__cell--wide">
+                    <img
+                      class="card__cell-image"
+                      src="./images/resources/details-2.jpg"
+                      alt=""
+                      width="917" height="332" loading="lazy"
+                    />
+                  </div>
+                  <div class="card__cell tile">
+                    <h4 class="card__cell-subtitle">Total Whitepapers</h4>
+                    <p class="card__cell-description h6">Over 50 whitepapers</p>
+                  </div>
+                  <div class="card__cell tile">
+                    <h4 class="card__cell-subtitle">Download Formats</h4>
+                    <p class="card__cell-description h6">PDF format for access.</p>
+                    <a href="/" class="card__cell-link button">
+                      <span class="icon icon--yellow-eye">Preview</span>
+                    </a>
+                  </div>
+                  <div class="card__cell card__cell--wide tile ">
+                    <h4 class="card__cell-subtitle">Average Author Expertise</h4>
+                    <p class="card__cell-description h6">Whitepapers are authored by subject matter experts with an average of 20 years of experience.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+
   </main>
   
   <footer class="footer">
