feat: page home

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 alt=""
                 width="50" height="50" loading="lazy"
               />
-              <a href="/" class="advantage-card__link">
+              <a href="/" class="advantage-card__link circle-icon">
                 <h3 class="advantage-card__title h6">Latest News Updates</h3>
                 <p class="advantage-card__subtitle">Stay Current</p>
               </a>
@@ -158,7 +158,7 @@
                 alt=""
                 width="50" height="50" loading="lazy"
               />
-              <a href="/" class="advantage-card__link">
+              <a href="/" class="advantage-card__link circle-icon">
                 <h3 class="advantage-card__title h6">Expert Contributors</h3>
                 <p class="advantage-card__subtitle">Trusted Insights</p>
               </a>
@@ -173,7 +173,7 @@
                 alt=""
                 width="50" height="50" loading="lazy"
               />
-              <a href="/" class="advantage-card__link">
+              <a href="/" class="advantage-card__link circle-icon">
                 <h3 class="advantage-card__title h6">Global Readership</h3>
                 <p class="advantage-card__subtitle">Worldwide Impact</p>
               </a>
@@ -1080,8 +1080,10 @@
             alt=""
             width="150" height="150" loading="lazy"
           />
-          <p class="about__subtitle tag">Learn, Connect, and Innovate</p>
-          <h2 class="about__title" id="about-title">Be Part of the Future Tech Revolution</h2>
+          <div class="about__info">
+            <p class="about__subtitle tag">Learn, Connect, and Innovate</p>
+            <h2 class="about__title" id="about-title">Be Part of the Future Tech Revolution</h2>
+          </div>
           <div class="about__description">
             <p>Immerse yourself in the world of future technology. Explore our comprehensive resources, connect with fellow tech enthusiasts, and drive innovation in the industry. Join a dynamic community of forward-thinkers.</p>
           </div>
@@ -1089,7 +1091,7 @@
         <ul class="about__list">
           <li class="about__item">
             <a href="/" class="about-card tile">
-              <h3 class="about-card__title">Resource Access</h3>
+              <h3 class="about-card__title circle-icon">Resource Access</h3>
               <div class="about-card__description">
                 <p>Visitors can access a wide range of resources, including ebooks, whitepapers, reports.</p>
               </div>
@@ -1097,7 +1099,7 @@
           </li>
           <li class="about__item">
             <a href="/" class="about-card tile">
-              <h3 class="about-card__title">Community Forum</h3>
+              <h3 class="about-card__title circle-icon">Community Forum</h3>
               <div class="about-card__description">
                 <p>Join our active community forum to discuss industry trends, share insights, and collaborate with peers.</p>
               </div>
@@ -1105,7 +1107,7 @@
           </li>
           <li class="about__item">
             <a href="/" class="about-card tile">
-              <h3 class="about-card__title">Tech Events</h3>
+              <h3 class="about-card__title circle-icon">Tech Events</h3>
               <div class="about-card__description">
                 <p>Stay updated on upcoming tech events, webinars, and conferences to enhance your knowledge.</p>
               </div>
