--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <title>Future Tech | Home</title>
   <link rel="stylesheet" href="./styles/main.css">
   <script src="./scripts/main.js" type="module" defer></script>
-  <link rel="stylesheet" href="styles/_globals.scss">
 </head>
 <body>
   <header class="header" data-js-header>
@@ -38,20 +37,20 @@
           <nav class="header__menu">
             <ul class="header__menu-list">
               <li class="header__menu-item">
-                <a href="/" class="header__menu-link is-active">Home</a>
+                <a href="/index.html" class="header__menu-link is-active">Home</a>
               </li>
               <li class="header__menu-item">
-                <a href="/" class="header__menu-link">News</a>
+                <a href="./news.html" class="header__menu-link">News</a>
               </li>
               <li class="header__menu-item">
-                <a href="/" class="header__menu-link">Podcasts</a>
+                <a href="./podcasts.html" class="header__menu-link">Podcasts</a>
               </li>
               <li class="header__menu-item">
-                <a href="/" class="header__menu-link">Resources</a>
+                <a href="./resources.html" class="header__menu-link">Resources</a>
               </li>
             </ul>
           </nav>
-          <a href="/" class="header__contact-us-link button button--accent">
+          <a href="./contacts.html" class="header__contact-us-link button button--accent">
             Contact Us
           </a>
         </div>
@@ -286,7 +285,7 @@
             <p class="section__subtitle tag">A Knowledge Treasure Trove</p>
             <h2 class="section__title" id="blog-title">Explore FutureTech's In-Depth Blog Posts</h2>
           </div>
-          <a href="/" class="section__link button">
+          <a href="./blog.html" class="section__link button">
             <span class="icon icon--yellow-arrow">View All Blogs</span>
           </a>
         </div>
