--- a/index.html
+++ b/index.html
@@ -380,12 +380,14 @@
           >Explore FutureTech's In-Depth Blog Posts
           </h2>
         </div>
-        <a
-          href="./blog.html"
-          class="section__link button"
-        >
-          <span class="icon icon--yellow-arrow">View All Blogs</span>
-        </a>
+        <div class="section__actions">
+          <a
+            href="./blog.html"
+            class="section__link button"
+          >
+            <span class="icon icon--yellow-arrow">View All Blogs</span>
+          </a>
+        </div>
       </div>
     </header>
     <div
@@ -914,12 +916,14 @@
           >Unlock Valuable Knowledge with FutureTech's Resources
           </h2>
         </div>
-        <a
-          href="/"
-          class="section__link button"
-        >
-          <span class="icon icon--yellow-arrow">View All Resources</span>
-        </a>
+        <div class="section__actions">
+          <a
+            href="/"
+            class="section__link button"
+          >
+            <span class="icon icon--yellow-arrow">View All Resources</span>
+          </a>
+        </div>
       </div>
     </header>
     <div class="section__body">
@@ -1162,12 +1166,14 @@
           >Real Words from Real Readers
           </h2>
         </div>
-        <a
-          href="/"
-          class="section__link button"
-        >
-          <span class="icon icon--yellow-arrow">View All Testimonials</span>
-        </a>
+        <div class="section__actions">
+          <a
+            href="/"
+            class="section__link button"
+          >
+            <span class="icon icon--yellow-arrow">View All Testimonials</span>
+          </a>
+        </div>
       </div>
     </header>
     <div class="section__body">
