--- a/news.html
+++ b/news.html
@@ -508,12 +508,14 @@
           >Discover the World of Headlines
           </h2>
         </div>
-        <a
-          href="./news.html"
-          class="section__link button"
-        >
-          <span class="icon icon--yellow-arrow">View All News</span>
-        </a>
+        <div class="section__actions">
+          <a
+            href="./news.html"
+            class="section__link button"
+          >
+            <span class="icon icon--yellow-arrow">View All News</span>
+          </a>
+        </div>
       </div>
     </header>
     <div
@@ -1042,12 +1044,14 @@
           >Visual Insights for the Modern Viewer
           </h2>
         </div>
-        <a
-          href="/"
-          class="section__link button"
-        >
-          <span class="icon icon--yellow-arrow">View All</span>
-        </a>
+        <div class="section__actions">
+          <a
+            href="/"
+            class="section__link button"
+          >
+            <span class="icon icon--yellow-arrow">View All</span>
+          </a>
+        </div>
       </div>
     </header>
     <div class="section__body">
