--- a/index.html
+++ b/index.html
@@ -913,7 +913,7 @@
           <h2
             class="section__title"
             id="resources-title"
-          >Unlock Valuable Knowledge with FutureTech's Resources
+          >Unlock Valuable Knowledge with<br/> FutureTech's Resources
           </h2>
         </div>
         <div class="section__actions">
